--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.4",
 		"gsap": "^3.12.2",
+		"lightbox.js-react": "^0.9.8",
 		"locomotive-scroll": "^5.0.0-beta.11",
 		"lucide-react": "^0.292.0",
 		"next": "13.5.6",
