--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"next-seo": "^6.1.0",
 		"react": "^18",
 		"react-countup": "^6.5.0",
+		"react-device-detect": "^2.2.3",
 		"react-dom": "^18",
 		"react-intersection-observer": "^9.5.3",
 		"react-scroll-trigger": "^0.6.14",
