--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sentry/nextjs": "^7.86.0",
 		"@studio-freight/lenis": "^1.0.29",
 		"@studio-freight/react-lenis": "^0.0.36",
+		"@types/gsap": "^3.0.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.4",
