--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"server-only": "^0.0.1",
 		"styled-components": "5.2",
 		"suspend-react": "^0.1.3",
+		"swiper": "^11.0.5",
 		"tailwind-merge": "^2.0.0",
 		"tailwind-scrollbar-hide": "^1.1.7",
 		"tailwindcss-animate": "^1.0.7"
