--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 		"@formspree/react": "^2.5.1",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.0.4",
-		"@sanity/client": "^6.7.1",
+		"@sanity/client": "^6.12.3",
 		"@sanity/image-url": "^1.0.2",
+		"@sanity/orderable-document-list": "^1.2.0",
+		"@sanity/overlays": "^2.3.9",
+		"@sanity/react-loader": "^1.8.1",
 		"@sanity/vision": "^3.18.1",
 		"@sentry/nextjs": "^7.86.0",
 		"@studio-freight/lenis": "^1.0.29",
