--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@studio-freight/react-lenis": "^0.0.36",
 		"@types/gsap": "^3.0.0",
 		"class-variance-authority": "^0.7.0",
+		"classnames": "^2.5.1",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.4",
 		"gsap": "^3.12.2",
@@ -37,6 +38,7 @@
 		"react-device-detect": "^2.2.3",
 		"react-dom": "^18",
 		"react-intersection-observer": "^9.5.3",
+		"react-router-dom": "^6.21.3",
 		"react-scroll-trigger": "^0.6.14",
 		"server-only": "^0.0.1",
 		"styled-components": "5.2",
