--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
 	},
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
+		"@googlemaps/js-api-loader": "^1.16.6",
+		"@portabletext/react": "^3.0.11",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@sanity/client": "^6.12.3",
+		"@sanity/google-maps-input": "^3.0.2",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/orderable-document-list": "^1.2.0",
 		"@sanity/overlays": "^2.3.9",
@@ -21,6 +24,7 @@
 		"@sentry/nextjs": "^7.86.0",
 		"@studio-freight/lenis": "^1.0.29",
 		"@studio-freight/react-lenis": "^0.0.36",
+		"@types/google.maps": "^3.55.3",
 		"@types/gsap": "^3.0.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
