--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sanity/orderable-document-list": "^1.2.0",
 		"@sanity/overlays": "^2.3.9",
 		"@sanity/react-loader": "^1.8.1",
+		"@sanity/structnure": "^2.36.2",
 		"@sanity/vision": "^3.18.1",
 		"@sentry/nextjs": "^7.86.0",
 		"@studio-freight/lenis": "^1.0.29",
