--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@sanity/orderable-document-list": "^1.2.0",
 		"@sanity/overlays": "^2.3.9",
 		"@sanity/react-loader": "^1.8.1",
-		"@sanity/structnure": "^2.36.2",
+		"@sanity/structure": "^2.36.2",
 		"@sanity/vision": "^3.18.1",
 		"@sentry/nextjs": "^7.86.0",
 		"@studio-freight/lenis": "^1.0.29",
@@ -60,6 +60,8 @@
 		"eslint": "^8",
 		"eslint-config-next": "13.5.6",
 		"postcss": "^8",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.11",
 		"tailwindcss": "^3",
 		"typescript": "^5"
 	},
