--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.3",
     "react-scroll-trigger": "^0.6.14",
-    "sanity": "^3.30.0",
+    "sanity": "^3.30.1",
+    "sanity-plugin-media": "^2.2.5",
     "server-only": "^0.0.1",
     "styled-components": "5.2",
     "suspend-react": "^0.1.3",
