--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@sanity/client": "^6.14.3",
     "@sanity/google-maps-input": "^3.0.2",
+    "@sanity/icons": "^2.10.3",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/orderable-document-list": "^1.2.0",
+    "@sanity/orderable-document-list": "^1.2.1",
     "@sanity/overlays": "^2.3.19",
     "@sanity/react-loader": "^1.8.7",
     "@sanity/structure": "^2.36.2",
