--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
 		"@googlemaps/js-api-loader": "^1.16.6",
 		"@portabletext/react": "^3.0.11",
 		"@radix-ui/react-accordion": "^1.1.2",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.0.4",
-		"@sanity/client": "^6.12.3",
+		"@sanity/client": "^6.15.1",
 		"@sanity/google-maps-input": "^3.0.2",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/orderable-document-list": "^1.2.0",
-		"@sanity/overlays": "^2.3.9",
-		"@sanity/react-loader": "^1.8.1",
+		"@sanity/overlays": "^2.3.21",
+		"@sanity/react-loader": "^1.9.1",
 		"@sanity/structure": "^2.36.2",
 		"@sanity/vision": "^3.18.1",
+		"@sanity/visual-editing": "^1.5.2",
 		"@sentry/nextjs": "^7.86.0",
 		"@studio-freight/lenis": "^1.0.29",
 		"@studio-freight/react-lenis": "^0.0.36",
@@ -31,19 +33,22 @@
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.4",
 		"gsap": "^3.12.2",
+		"latest-version": "^9.0.0",
 		"lightbox.js-react": "^0.9.8",
 		"locomotive-scroll": "^5.0.0-beta.11",
 		"lucide-react": "^0.292.0",
-		"next": "13.5.6",
-		"next-sanity": "^5.5.8",
+		"next": "14.1.2",
+		"next-sanity": "^7.1.4",
 		"next-seo": "^6.1.0",
-		"react": "^18",
+		"react": "^18.2.0",
 		"react-countup": "^6.5.0",
 		"react-device-detect": "^2.2.3",
-		"react-dom": "^18",
+		"react-dom": "^18.2.0",
 		"react-intersection-observer": "^9.5.3",
 		"react-router-dom": "^6.21.3",
 		"react-scroll-trigger": "^0.6.14",
+		"rxjs": "^7.8.1",
+		"sanity": "^3.30.1",
 		"server-only": "^0.0.1",
 		"styled-components": "5.2",
 		"suspend-react": "^0.1.3",
@@ -53,6 +58,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
