--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "13.5.6",
     "next-sanity": "^5.5.8",
     "next-seo": "^6.1.0",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-device-detect": "^2.2.3",
