--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
-    "gsap": "^3.12.2",
+    "gsap": "^3.12.5",
     "lightbox.js-react": "^0.9.8",
     "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.292.0",
-    "next": "13.5.6",
+    "next": "^14.1.4",
     "next-sanity": "^5.5.8",
     "next-seo": "^6.1.0",
     "plaiceholder": "^3.0.0",
@@ -51,7 +51,7 @@
     "sanity-plugin-media": "^2.2.5",
     "sanity-plugin-vercel-deploy": "^3.3.4",
     "server-only": "^0.0.1",
-    "styled-components": "5.2",
+    "styled-components": "^6.1.8",
     "suspend-react": "^0.1.3",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
