--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@types/gsap": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "gsap": "^3.12.5",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "lightbox.js-react": "^0.9.8",
     "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.292.0",
-    "next": "^14.1.4",
+    "next": "13.5.6",
     "next-sanity": "^5.5.8",
     "next-seo": "^6.1.0",
-    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-device-detect": "^2.2.3",
@@ -46,7 +46,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.3",
     "react-scroll-trigger": "^0.6.14",
-    "sanity": "^3.35.1",
+    "sanity": "^3.30.1",
     "sanity-plugin-media": "^2.2.5",
     "sanity-plugin-vercel-deploy": "^3.3.4",
     "server-only": "^0.0.1",
