--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/overlays": "^2.3.19",
     "@sanity/react-loader": "^1.8.7",
     "@sanity/structure": "^2.36.2",
+    "@sanity/ui": "^2.0.12",
     "@sanity/vision": "^3.18.1",
     "@sentry/nextjs": "^7.86.0",
     "@studio-freight/lenis": "^1.0.29",
@@ -32,6 +33,7 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
+    "l": "^0.6.0",
     "lightbox.js-react": "^0.9.8",
     "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.292.0",
@@ -50,7 +52,7 @@
     "sanity-plugin-media": "^2.2.5",
     "sanity-plugin-vercel-deploy": "^3.3.4",
     "server-only": "^0.0.1",
-    "styled-components": "^5.2",
+    "styled-components": "^6.1.8",
     "suspend-react": "^0.1.3",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
