--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lightbox.js-react": "^0.9.8",
     "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.292.0",
-    "next": "13.5.6",
+    "next": "^14.1.4",
     "next-sanity": "^8.4.5",
     "next-seo": "^6.1.0",
     "react": "^18",
