--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@react-pdf/renderer": "^3.4.0",
     "@sanity/client": "^6.14.3",
     "@sanity/google-maps-input": "^3.0.2",
     "@sanity/icons": "^2.10.3",
@@ -27,10 +28,12 @@
     "@studio-freight/lenis": "^1.0.29",
     "@studio-freight/react-lenis": "^0.0.36",
     "@types/google.maps": "^3.55.3",
+    "@wojtekmaj/react-hooks": "^1.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
+    "jquery": "^3.7.1",
     "l": "^0.6.0",
     "lightbox.js-react": "^0.9.8",
     "locomotive-scroll": "^5.0.0-beta.11",
@@ -44,6 +47,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.3",
+    "react-pageflip": "^2.0.3",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.21.3",
     "react-scroll-trigger": "^0.6.14",
     "sanity": "^3.35.1",
@@ -63,6 +68,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
