--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "^6.21.3",
     "react-scroll-trigger": "^0.6.14",
     "sanity": "^3.35.1",
+    "sanity-plugin-iframe-pane": "^3.1.6",
     "sanity-plugin-media": "^2.2.5",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.8",
