--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-countup": "^6.5.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-facebook-pixel": "^1.0.4",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.3",
     "react-pageflip": "^2.0.3",
